--- a/AsyncSocket.Server/AsyncSocket.Server.csproj
+++ b/AsyncSocket.Server/AsyncSocket.Server.csproj
@@ -95,7 +95,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TCPSocketAsync\AsyncSocket.Common.csproj">
+    <ProjectReference Include="..\AsyncSocket.Core\AsyncSocket.Core.csproj">
       <Project>{8c695a4c-bd39-432e-89c9-103589f75361}</Project>
       <Name>AsyncSocket.Common</Name>
     </ProjectReference>
